apps/base/monitoring/prometheus-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`prometheus.apps.lab.mxe11.nl`)
      services:
        - kind: Service
          name: kube-prometheus-stack-prometheus
          port: 9090
  tls:
    secretName: prometheus-tls-cert
